# app/Http/Requests/CreateCompteRequest.php
@@ -31,10 +31,7 @@ class CreateCompteRequest extends FormRequest
             'nci' => 'required|string|max:255|unique:users,nci',
             'email' => 'required|email|max:255|unique:users,email',
             'numero_user' => 'required|string|max:255|unique:comptes,numero_user',
-            'numero_compte' => 'required|string|max:255|unique:comptes,numero_compte',
-            'login' => 'required|string|max:255|unique:comptes,login',
             'password' => 'required|string|min:8',
-            'code_marchand' => 'nullable|string|max:255',
             'montant_initial' => 'required|numeric|min:0',
         ];
     }
@@ -68,19 +65,9 @@ class CreateCompteRequest extends FormRequest
             'numero_user.string' => ValidationMessages::STRING_NUMERO_USER->getMessage(),
             'numero_user.max' => ValidationMessages::MAX_NUMERO_USER->getMessage(),
             'numero_user.unique' => 'Ce numéro utilisateur existe déjà',
-            'numero_compte.required' => ValidationMessages::REQUIRED_NUMERO_COMPTE->getMessage(),
-            'numero_compte.string' => ValidationMessages::STRING_INVALID->getMessage(),
-            'numero_compte.max' => ValidationMessages::MAX_255->getMessage(),
-            'numero_compte.unique' => ValidationMessages::UNIQUE_NUMERO_COMPTE->getMessage(),
-            'login.required' => ValidationMessages::REQUIRED_NOM->getMessage(),
-            'login.string' => ValidationMessages::STRING_INVALID->getMessage(),
-            'login.max' => ValidationMessages::MAX_255->getMessage(),
-            'login.unique' => 'Ce login existe déjà',
             'password.required' => ValidationMessages::REQUIRED_MOT_DE_PASSE->getMessage(),
             'password.string' => ValidationMessages::STRING_INVALID->getMessage(),
             'password.min' => ValidationMessages::MIN_8->getMessage(),
-            'code_marchand.string' => ValidationMessages::STRING_INVALID->getMessage(),
-            'code_marchand.max' => ValidationMessages::MAX_255->getMessage(),
             'montant_initial.required' => ValidationMessages::REQUIRED_MONTANT->getMessage(),
             'montant_initial.numeric' => ValidationMessages::DECIMAL_INVALID->getMessage(),
             'montant_initial.min' => ValidationMessages::MONTANT_MIN->getMessage(),
@@ -101,10 +88,7 @@ class CreateCompteRequest extends FormRequest
             'nci' => 'numéro de carte d\'identité',
             'email' => 'adresse email',
             'numero_user' => 'numéro utilisateur',
-            'numero_compte' => 'numéro de compte',
-            'login' => 'nom d\'utilisateur',
             'password' => 'mot de passe',
-            'code_marchand' => 'code marchand',
             'montant_initial' => 'montant initial',
         ];
     }
